--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,6 +1,7 @@
-
-<ul>
 <% @tasks.each do |task| %>
-<li><%= task.title %></li>
-<% end %>
-</ul>
+    <p>
+      <%= task.id %>
+      <%= task.title %>
+    </p>
+  <% end %>
+  
